Update and rename 2017-7-2-Def.md to 2017-7-2-Suck.md

--- a/_posts/2017-7-2-Suck.md
+++ b/_posts/2017-7-2-Suck.md
@@ -2,8 +2,7 @@
 layout: post
 title: Definitions
 ---
-### S:
-###### SUCK:
+## SUCK:
 An acronym. Stands for "Superbly Underestimated Cool Kids."
 > Jake and Logan Paul SUCK. They are Superbly Underestimated Cool Kids! Have you seen how buff they are? 
 >![alt text](https://i.ytimg.com/vi/8ieOj95ZQes/maxresdefault.jpg "The Cool Kids, Jake and Logan Paul")
